--- a/idealhome/src/main/resources/application.yml
+++ b/idealhome/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
 server:
   port: 8081
 
+logging:
+  level:
+    org.springframework: INFO
+
 idealista:
   url: ${IDEALISTA_API}
   secret: ${IDEALISTA_SECRET}
