Added bathroom filter

--- a/idealhome/src/main/resources/application.yml
+++ b/idealhome/src/main/resources/application.yml
@@ -27,6 +27,7 @@ idealista:
     maxItems: 50
     isParkingSpaceIncluded: true
     bedrooms: 2
+    bathrooms: 2
     elevator: true
     newDevelopment: true
     size: 100
