--- a/idealhome/src/main/resources/application.yml
+++ b/idealhome/src/main/resources/application.yml
@@ -9,8 +9,13 @@ logging:
   level:
     org.springframework: INFO
 
+notion:
+  url: ${NOTION_URL}
+  key: ${NOTION_KEY}
+  version: ${NOTION_API_VERSION}
+
 idealista:
-  url: ${IDEALISTA_API}
+  url: ${IDEALISTA_URL}
   secret: ${IDEALISTA_SECRET}
   key: ${IDEALISTA_KEY}
   grantType: ${IDEALISTA_GRANT_TYPE}
@@ -26,7 +31,6 @@ idealista:
     locale: "pt"
     maxItems: 50
     isParkingSpaceIncluded: true
-    bedrooms: 2
     bathrooms: 2
     elevator: true
     size: 90
