Created the notionClient response DTO and made a filter to get only the properties which are not in notion database

--- a/idealhome/src/main/resources/application.yml
+++ b/idealhome/src/main/resources/application.yml
@@ -13,6 +13,9 @@ notion:
   url: ${NOTION_URL}
   key: ${NOTION_KEY}
   version: ${NOTION_API_VERSION}
+  grantType: ${NOTION_GRANT_TYPE}
+  scope: ${NOTION_SCOPE}
+  dataBaseId: ${NOTION_DATABASE_ID}
 
 idealista:
   url: ${IDEALISTA_URL}
