--- a/idealhome/src/main/resources/application.yml
+++ b/idealhome/src/main/resources/application.yml
@@ -23,6 +23,12 @@ notion:
   grantType: ${NOTION_GRANT_TYPE}
   scope: ${NOTION_SCOPE}
   dataBaseId: ${NOTION_DATABASE_ID}
+  dataBaseUrl: ${NOTION_DATABASE_URL}
+
+telegram:
+  url: ${TELEGRAM_URL}
+  key: ${TELEGRAM_KEY}
+  chatId: ${TELEGRAM_CHAT_ID}
 
 idealista:
   url: ${IDEALISTA_URL}
