--- a/idealhome/src/main/resources/application.yml
+++ b/idealhome/src/main/resources/application.yml
@@ -1,6 +1,16 @@
 spring:
   application:
     name: IdealHome
+  cloud:
+    openfeign:
+      client:
+        config:
+          default:
+            loggerLevel: FULL
+      httpclient:
+        hc5:
+          enabled: true
+
 
 server:
   port: 8081
@@ -9,12 +19,6 @@ logging:
   level:
     org.springframework: INFO
     com.api.idealhome: DEBUG
-
-feign:
-  client:
-    config:
-      default:
-        loggerLevel: FULL
 
 notion:
   url: ${NOTION_URL}
