--- a/idealhome/src/main/resources/application.yml
+++ b/idealhome/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
       client:
         config:
           default:
-            loggerLevel: FULL
+            loggerLevel: BASIC
       httpclient:
         hc5:
           enabled: true
