--- a/idealhome/pom.xml
+++ b/idealhome/pom.xml
@@ -10,9 +10,10 @@
     </parent>
     <groupId>com.api</groupId>
     <artifactId>idealhome</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>idealhome</name>
     <description>Find your dream ideal home</description>
+    <packaging>war</packaging>
     <url/>
     <licenses>
         <license/>
