Fixed errors in Dockerfile

--- a/idealhome/Dockerfile
+++ b/idealhome/Dockerfile
@@ -3,7 +3,7 @@ COPY . .
 RUN mvn clean package
 
 FROM eclipse-temurin:21-jdk
-COPY --from=build /target/*.war idealhome-1.0.0.war
+COPY --from=build /target/*.jar idealhome-1.0.0.jar
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-war", "idealhome-1.0.0.war"]
+ENTRYPOINT ["java", "-jar", "idealhome-1.0.0.jar"]
