Improved code to get custom filters from properties instead of hardcoding

--- a/idealhome/src/main/resources/application.yml
+++ b/idealhome/src/main/resources/application.yml
@@ -55,3 +55,7 @@ idealista:
     elevator: true
     size: 90
     sinceDate: Y
+  customFilters:
+    minimumRooms: 2
+    province: ${PROVINCE}
+    notInterestedMunicipality: ${NOT_INTERESTED_MUNICIPALITY}
